--- a/deploy/kubernetes/manifests-monitoring/22-grafana-svc.yaml
+++ b/deploy/kubernetes/manifests-monitoring/22-grafana-svc.yaml
@@ -7,12 +7,12 @@ metadata:
     app: grafana
     component: core
 spec:
-  type: NodePort
+  type: ClusterIP
   ports:
-  - protocol: TCP
-    port: 80
+  - name: http
+    protocol: TCP
+    port: 3000
     targetPort: 3000
-    nodePort: 31300
   selector:
     app: grafana
     component: core
