--- a/deploy/kubernetes/graf-ingress.yaml
+++ b/deploy/kubernetes/graf-ingress.yaml
@@ -22,6 +22,6 @@ spec:
         path: "/"
         backend:
           service:
-            name: loki-grafana
+            name: grafana
             port:
               number: 80
