--- a/deploy/kubernetes/manifests-monitoring/22-grafana-svc.yaml
+++ b/deploy/kubernetes/manifests-monitoring/22-grafana-svc.yaml
@@ -9,9 +9,7 @@ metadata:
 spec:
   type: ClusterIP
   ports:
-  - name: http
-    protocol: TCP
-    port: 3000
+  - port: 80
     targetPort: 3000
   selector:
     app: grafana
