--- a/deploy/kubernetes/manifests-logging/fluent-bit-role-binding.yaml
+++ b/deploy/kubernetes/manifests-logging/fluent-bit-role-binding.yaml
@@ -1,13 +1,12 @@
----
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRoleBinding
 metadata:
-  name: fluentd
+  name: fluent-bit-read
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: fluentd
+  name: fluent-bit-read
 subjects:
 - kind: ServiceAccount
-  name: fluentd
-  namespace: kube-system
+  name: fluent-bit
+  namespace: logging
