--- a/deploy/kubernetes/manifests-logging/fluent-bit-service-account.yaml
+++ b/deploy/kubernetes/manifests-logging/fluent-bit-service-account.yaml
@@ -1,6 +1,5 @@
----
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: fluentd
-  namespace: kube-system
+  name: fluent-bit
+  namespace: logging
