--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,10 +43,6 @@ jobs:
           sed -i "s/appVersion\:.*/appVersion\: ${DEFAULT_VERSION_CHART}-${SHORT_SHA}/" .helm/${APP}/Chart.yaml
           helm lint ./.helm/${APP}
 
-      # - name: Get tag name
-      #   uses: little-core-labs/get-git-tag@v3.0.1
-      #   id: tag-name
-
       - name: Push Helm chart
         env:
           SHORT_SHA: ${{ steps.short-sha.outputs.sha }}
@@ -55,33 +51,14 @@ jobs:
           ls
 #          rm ${APP}-${DEFAULT_VERSION_CHART}-${SHORT_SHA}.tgz
 
-  deploy-stage:
-    needs: helm-chart
-    runs-on:
-      - ubuntu-latest
-
-    container:
-      image: quay.io/roboll/helmfile:v0.142.0
-
-    env:
-      HELM_EXPERIMENTAL_OCI: 1
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Get short sha
-        uses: benjlevesque/short-sha@v1.2
-        id: short-sha
-        with:
-          length: 7
-
       - name: deploy
         env:
           SHORT_SHA: ${{ steps.short-sha.outputs.sha }}
         run: |
-          ls        
-          helmfile -f .helm/helmfile.yaml -e stage --state-values-set CHARTS_REPO_SECRET=${{ secrets.CHARTS_REPO_SECRET }},CHART_TAG=${DEFAULT_VERSION_CHART}-${SHORT_SHA} lint
-#          echo ${{ secrets.KUBE_CONFIG_STAGE }} | base64 -d > ~/CONFIG
-#          export KUBECONFIG=~/CONFIG
-#          helmfile -f .helm/helmfile.yaml -e stage --state-values-set CHARTS_REPO_SECRET=${{ secrets.CHARTS_REPO_SECRET }},CHART_TAG=${DEFAULT_VERSION_CHART}-${SHORT_SHA} sync
+          APP=sockshop
+          echo "APP=${APP}" > $GITHUB_ENV
+          echo ${{ secrets.KUBE_CONFIG_STAGE }} 
+          helmfile -f .helm/helmfile.yaml -e stage --state-values-set CHART_TAG=${DEFAULT_VERSION_CHART}-${SHORT_SHA} lint
+          echo ${{ secrets.KUBE_CONFIG_STAGE }} | base64 -d > ~/CONFIG
+          export KUBECONFIG=~/CONFIG
+          helmfile -f .helm/helmfile.yaml -e stage --state-values-set CHART_TAG=${DEFAULT_VERSION_CHART}-${SHORT_SHA} sync
