--- a/.helm/helmfile.yaml
+++ b/.helm/helmfile.yaml
@@ -3,19 +3,12 @@ helmDefaults:
   atomic: true
   timeout: 300
 
-repositories:
-  - url: registry.otus.io/sockshop/
-    name: otus
-    username: 'robot$sockshop'
-    password: '{{ .Values.CHARTS_REPO_SECRET }}'
-    oci: true
-
 environments:
   stage:
 
 releases:
   - name: sockshop-{{ .Environment.Name }}
-    namespace: sockshop-{{ .Environment.Name }}
+    namespace: sock-shop
     version: {{ .Values.CHART_TAG }}
     createNamespace: false
     chart: sockshop
